# Houseinsight-Agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_report.txt  大邑.csv
.github/workflows/: ci.yml  perf.yml
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
docs/: METRICS.md  SPEC.md  TASKS.md
server/: __init__.py  __main__.py  cli.py  main.py
server/agent/: graph.py  nodes.py  plan_schema.py  prompts.py  run_context.py  state.py
server/api/: event_hub.py  routes.py  ws.py
server/core/: config.py  llm.py  session_store.py
server/tools/: _dataframe.py  analyze_tools.py  clean_tools.py  explore_tools.py  house_tools.py  register.py  search_tools.py
tests/: conftest.py  test_analyze_observe_rules.py  test_analyze_tool_caps.py  test_answer_safety.py  test_api.py  test_functional_metrics.py  test_graph_smoke.py  test_plan_generation_error.py  test_plan_schema.py  test_run_context.py  test_session_store.py  test_spec_success_criteria.py  test_ws_run_events.py  test_ws_schema.py
tests/data/: 新都.csv  武侯.csv  温江.csv
tests/helpers/: __init__.py  agent_fixtures.py
tests/perf/: __init__.py  test_perf_baseline.py
tests/tools/: test_analyze_tools.py  test_clean_tools.py  test_explore_tools.py  test_filter_coerce.py  test_house_tools.py  test_search_text.py
web/: .env.example  README.md  index.html  package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessageRow.tsx  DataPanel.tsx  EmptyState.tsx  ErrorBanner.tsx  EventLog.tsx  (+7 more)
(+3 files in other folders)
