[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "houseinsight-agent"
version = "0.1.0"
description = "自主分析二手房 CSV 的 LangGraph Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "langgraph>=0.2.40",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.8",
  "langchain-core>=0.2.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not perf\""
markers = [
  "perf: performance baseline tests (excluded from default pytest run; use `pytest -m perf`)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
